--- a/src/style.css
+++ b/src/style.css
@@ -331,13 +331,15 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-
+  gap: 10px;
   width: 100%;
   height: 95%;
   overflow-y: scroll;
 }
 
 .forecast-card {
+  border: 1px solid black;
+  border-radius: 1rem;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -355,6 +357,8 @@ main {
 }
 
 .weekly-card {
+  border: 1px solid black;
+  border-radius: 1rem;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -367,6 +371,9 @@ main {
 .weekly-card-icon,
 .weekly-card-temps {
   height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .weekly-card-temps {
