--- a/src/style.css
+++ b/src/style.css
@@ -176,10 +176,21 @@ body {
   display: flex;
 }
 
+input {
+  background.color: #8edbe5;
+  border-radius: 0.5rem;
+  border: none;
+  border: 1px solid #2091a0;
+}
+
+#search-btn {
+  border-radius: 0.5rem;
+}
+
 header {
   border: 1px solid red;
   width: 90%;
-  height: 100px;
+  height: 50px;
   display: flex;
   align-items: flex-end;
   justify-content: flex-end;
@@ -191,6 +202,21 @@ main {
   align-items: center;
   height: 95%;
   width: 95%;
+}
+
+button {
+  background-color: #51d0e0;
+  border: none;
+  border: 1px solid #2091a0;
+}
+#hourly-btn,
+#tomorrow-btn {
+  border-radius: 0.5rem 0 0 0.5rem;
+}
+
+#weekly-btn,
+#precip-btn {
+  border-radius: 0 0.5rem 0.5rem 0;
 }
 
 .borders {
@@ -384,7 +410,6 @@ main {
 
 .card {
   height: 100%;
-  width: 150px;
   padding-left: 10px;
   padding-right: 10px;
   display: flex;
