--- a/src/style.css
+++ b/src/style.css
@@ -181,16 +181,22 @@ body {
 
 .input-section {
   display: flex;
+  gap: 10px;
 }
 
 input {
-  background.color: #8edbe5;
+  background-color: #51d0e0;
   border-radius: 0.5rem;
   border: none;
   border: 1px solid #2091a0;
 }
 
 #search-btn {
+  border-radius: 0.5rem;
+  background-color: #51d0e0;
+}
+select {
+  background-color: #51d0e0;
   border-radius: 0.5rem;
 }
 
@@ -218,7 +224,7 @@ button {
 
 button:active,
 button:focus {
-  background-color: #a6e1e9;
+  background-color: #b6e3e9;
 }
 
 #hourly-btn,
@@ -420,6 +426,7 @@ button:focus {
 }
 
 .weekly-card {
+  background-color: #8edbe5;
   border: 1px solid black;
   border-radius: 1rem;
   display: flex;
