--- a/src/style.css
+++ b/src/style.css
@@ -536,3 +536,6 @@ button:focus {
 	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 	background-color: #d62929;
 }
+.hidden {
+	display: none;
+}
