--- a/src/style.css
+++ b/src/style.css
@@ -295,7 +295,7 @@ button:focus,
 	margin-left: 10px;
 	height: 75%;
 	display: flex;
-	flex-wrap: wrap;
+
 	flex-direction: column;
 }
 
@@ -334,7 +334,7 @@ button:focus,
 	align-items: center;
 	justify-content: center;
 	height: 100%;
-
+	max-height: 180px;
 	width: 20%;
 }
 
@@ -371,6 +371,7 @@ button:focus,
 
 .alerts {
 	display: flex;
+	flex-direction: column;
 	align-items: center;
 	justify-content: center;
 	width: 60%;
@@ -504,7 +505,9 @@ button:focus,
 	grid-area: 1 / 1 / 2 / 7;
 	display: flex;
 	justify-content: space-between;
+	align-items: center;
 	border-radius: 1rem;
+	max-height: 180px;
 }
 .div3 {
 	border-radius: 1rem;
@@ -571,4 +574,8 @@ button:focus,
 	display: flex;
 	align-items: baseline;
 	gap: 10px;
+}
+
+a {
+	font-weight: 800;
 }
