--- a/src/style.css
+++ b/src/style.css
@@ -124,22 +124,6 @@ h6 {
 	font-size: 0.8rem;
 }
 
-.title-xl {
-	font-size: 76px;
-}
-
-.title-l {
-	font-size: 42px;
-}
-
-.title-m {
-	font-size: 22px;
-}
-
-.title-s {
-	font-size: 18px;
-}
-
 .bold-1 {
 	font-weight: 700;
 }
@@ -501,10 +485,6 @@ button:focus,
 }
 
 .div1 {
-	grid-area: 6 / 1 / 9 / 2;
-}
-
-.div2 {
 	background-color: #8edbe5;
 	grid-area: 1 / 1 / 2 / 7;
 	display: flex;
@@ -512,6 +492,14 @@ button:focus,
 	align-items: center;
 	border-radius: 1rem;
 	max-height: 180px;
+}
+.div2 {
+	background-color: #51d0e0;
+	border-radius: 1rem;
+	grid-area: 2 / 1 / 6 / 5;
+	display: flex;
+	flex-wrap: wrap;
+	border-collapse: collapse;
 }
 .div3 {
 	border-radius: 1rem;
@@ -521,13 +509,9 @@ button:focus,
 	flex-direction: column;
 	justify-content: space-between;
 }
+
 .div4 {
-	background-color: #51d0e0;
-	border-radius: 1rem;
-	grid-area: 2 / 1 / 6 / 5;
-	display: flex;
-	flex-wrap: wrap;
-	border-collapse: collapse;
+	grid-area: 6 / 1 / 9 / 2;
 }
 .div5 {
 	grid-area: 6 / 2 / 9 / 3;
@@ -551,22 +535,7 @@ button:focus,
 	grid-area: 9 / 4 / 12 / 5;
 }
 
-#style-2::-webkit-scrollbar-track {
-	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-	border-radius: 10px;
-	background-color: #f5f5f5;
-}
 
-#style-2::-webkit-scrollbar {
-	width: 12px;
-	background-color: #f5f5f5;
-}
-
-#style-2::-webkit-scrollbar-thumb {
-	border-radius: 10px;
-	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-	background-color: #d62929;
-}
 .hidden {
 	display: none;
 }
@@ -582,4 +551,8 @@ button:focus,
 
 a {
 	font-weight: 800;
+}
+.square-heading {
+	font-size: 18px;
+	font-weight: 600;
 }
