--- a/src/style.css
+++ b/src/style.css
@@ -157,6 +157,7 @@ body {
 
 	width: 100vw;
 	height: 100vh;
+max-width: 100%;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -165,7 +166,7 @@ body {
 
 .input-section {
 	display: flex;
-	gap: 10px;
+	gap: calc(10/16)rem;
 }
 
 input {
@@ -186,7 +187,7 @@ select {
 
 header {
 	width: 90%;
-	height: 50px;
+	height: 3rem;
 	display: flex;
 	align-items: flex-end;
 	justify-content: flex-end;
@@ -196,8 +197,9 @@ main {
 	margin: 0;
 	display: flex;
 	align-items: center;
-	height: 95%;
-	width: 95%;
+	height: 100%;
+	width: 100%;
+max-width: 100%;
 }
 
 button {
