--- a/src/style.css
+++ b/src/style.css
@@ -159,7 +159,27 @@ body {
 	max-width: 100%;
 	display: flex;
 	flex-direction: column;
-	overflow-x: hidden;
+	align-items: center;
+}
+
+main {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: flex-end;
+	height: 90%;
+	width: 95%;
+	max-width: 100%;
+}
+
+.parent {
+	display: grid;
+	grid-template-columns: repeat(6, 1fr);
+	grid-template-rows: 2fr repeat(10, 1fr);
+	grid-column-gap: 5px;
+	grid-row-gap: 5px;
+	width: 100%;
+	height: 100%;
 }
 
 .input-section {
@@ -216,16 +236,6 @@ button:focus,
 .borders {
 	border: 1px solid black;
 	border-radius: 1rem;
-}
-.parent {
-	margin: 0;
-	height: 100%;
-	width: 100%;
-	display: grid;
-	grid-template-columns: repeat(6, 1fr);
-	grid-template-rows: 2fr repeat(10, 1fr);
-	grid-column-gap: 5px;
-	grid-row-gap: 5px;
 }
 
 .rectangle-top {
