--- a/src/style.css
+++ b/src/style.css
@@ -223,13 +223,13 @@ button:focus,
 	background-color: #b6e3e9;
 }
 
-#hourly-btn,
-#tomorrow-btn {
+#hourlyBtn,
+#tomorrowBtn {
 	border-radius: 0.5rem 0 0 0.5rem;
 }
 
-#weekly-btn,
-#precip-btn {
+#weeklyBtn,
+#precipBtn {
 	border-radius: 0 0.5rem 0.5rem 0;
 }
 
@@ -272,9 +272,9 @@ button:focus,
 }
 
 .hourlyWeatherBtns {
-	margin-top: 5px;
+	margin-top: 10px;
 	margin-bottom: 5px;
-	margin-left: 5px;
+	margin-left: 10px;
 	height: 25%;
 }
 .daymax {
@@ -337,6 +337,7 @@ button:focus,
 	align-items: flex-start;
 }
 .current-conditions {
+	font-weight: 800;
 	margin-left: 20px;
 	width: 100%;
 }
@@ -377,8 +378,8 @@ button:focus,
 }
 
 .buttons-right {
-	margin-top: 5px;
-	margin-bottom: 5px;
+	margin-top: 10px;
+	margin-bottom: 10px;
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -557,4 +558,17 @@ a {
 .square-heading {
 	font-size: 18px;
 	font-weight: 600;
+}
+
+.windIcon {
+	margin-left: 5px;
+	margin-right: 10px;
+	max-width: 90%;
+	max-height: 100%;
+}
+
+#winddirDiv {
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 }
